--- a/src/app/modules/shared/paginator/paginator.component.html
+++ b/src/app/modules/shared/paginator/paginator.component.html
@@ -1,7 +1,9 @@
 <mat-paginator
-  [length]="100"
-  [pageSize]="10"
-  [pageSizeOptions]="[5, 10, 25, 100]"
+  [length]="pagination.length"
+  [pageSize]="pagination.limit"
+  [pageIndex]="pagination.page - 1"
+  [pageSizeOptions]="pagination.pageSizeOption"
   aria-label="Select page"
+  (page)="paginate($event)"
 >
 </mat-paginator>
