--- a/src/app/modules/shared/info-card/info-card.component.css
+++ b/src/app/modules/shared/info-card/info-card.component.css
@@ -30,7 +30,7 @@
 }
 
 .info-card-container.sm {
-  font-size: 10px;
+  font-size: 12px;
   line-height: 14px;
   max-width: 280px;
   gap: 8px;
@@ -70,8 +70,7 @@
   justify-content: space-between;
 }
 
-div.description-wrapper {
+div.content-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 6px;
 }
